[project]
name = "youtube-transcript-mcp-py"
version = "0.1.0"
description = "MCP server for fetching YouTube video transcripts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.12.4",
    "youtube-transcript-api>=1.2.2",
]

[project.scripts]
youtube-transcript-mcp = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
